# mupen64plus-netplay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
macos/: .gitignore
macos/MacosNetplay.xcworkspace/: contents.xcworkspacedata
macos/MacosNetplay.xcworkspace/xcuserdata/jonn.xcuserdatad/: UserInterfaceState.xcuserstate
macos/MacosNetplayApp/MacosNetplayApp/: AppDelegate.swift  Info.plist  ViewController.swift
macos/MacosNetplayApp/MacosNetplayApp.xcodeproj/: project.pbxproj
macos/MacosNetplayApp/MacosNetplayApp.xcodeproj/xcuserdata/jonn.xcuserdatad/xcschemes/: MacosNetplayApp.xcscheme  xcschememanagement.plist
macos/MacosNetplayApp/MacosNetplayApp/Base.lproj/: Main.storyboard
macos/MacosNetplayApp/MacosNetplayAppTests/: MacosNetplayAppTests.swift
macos/MacosNetplayApp/MacosNetplayAppUITests/: MacosNetplayAppUITests.swift
macos/netplay/: .gitignore  Package.swift  README.md
macos/netplay/NetplayApp/: ViewController.swift
macos/netplay/NetplayApp/Base.lproj/: Main.storyboard
macos/netplay/NetplayAppTests/: NetplayAppTests.swift
macos/netplay/NetplayAppUITests/: NetplayAppUITests.swift
macos/netplay/Sources/Netplay/: Netplay.swift
macos/netplay/Tests/: LinuxMain.swift
macos/netplay/Tests/NetplayTests/: NetplayTests.swift
macos/netplay/netplay.xcodeproj/: project.pbxproj
macos/netplay/netplay.xcodeproj/GeneratedModuleMap/BoringSSL/: module.modulemap
macos/netplay/netplay.xcodeproj/GeneratedModuleMap/Czlib/: module.modulemap
macos/netplay/netplay.xcodeproj/project.xcworkspace/xcuserdata/jonn.xcuserdatad/: UserInterfaceState.xcuserstate
macos/netplay/netplay.xcodeproj/xcshareddata/xcschemes/: netplay-Package.xcscheme  xcschememanagement.plist
mupen64plus-prebuilt/: Readme.txt  run_glide.sh  run_rice.sh
mupen64plus-prebuilt/mupen64plus.app/Contents/MacOS/: mupen64plus
netplay/: .gitignore  CMakeLists.txt  README.md
netplay/base/: CMakeLists.txt  netplayServiceProto.proto  timings.proto
netplay/client/: CMakeLists.txt  button-coder-interface.h  client.h  client.hpp  client_test.cc  event-stream-handler.h  event-stream-handler.hpp  event-stream-handler_test.cc  host-utils.cc  host-utils.h  input-queue.h  input-queue.hpp  input-queue_test.cc  mocks.h  test-utils.h  utils.h
netplay/client/plugins/mupen64/: CMakeLists.txt  coder.cc  coder.h  config-handler.cc  config-handler.h  mocks.h  mupen64.cc  mupen64.h  mupen64_test.cc  osal_dynamiclib.h  osal_dynamiclib_unix.c  osal_dynamiclib_unix.cc  plugin-impl.cc  plugin-impl.h  plugin-impl_test.cc  util.cc  util.h  util_test.cc
netplay/cmake/Modules/: FindGRPC.cmake  FindGlog.cmake  FindMupen64.cmake
netplay/integration_tests/: CMakeLists.txt  integration-test-main.cc  integration-test-main.h  integration-tests.cc  netplay-integration-test.h  netplay-server-test-fixture.cc  netplay-server-test-fixture.h
netplay/scripts/: .gitignore  CMakeLists.txt  make-console.cc  run_linux.sh  run_osx.sh  start-game.cc
netplay/scripts/data/: mupen64plus.cfg-netplay-template.txt
netplay/server/: .gitignore  CMakeLists.txt  client.cc  client.h  console.cc  console.h  console_test.cc  netplay-server.cc  netplay-server.h  netplay-server_test.cc  player.cc  player.h  test-mocks.h
netplay/server/src/netplayServer/: Client.java  Console.java  Player.java  PlugRequestException.java  Server.java  ServerStart.java
netplay/server/tests/netplayServer/: ClientTest.java  ConsoleTest.java  ServerTest.java
